removed the  mask-image to fix the orb visibilty

--- a/src/components/hero2/Hero.scss
+++ b/src/components/hero2/Hero.scss
@@ -18,10 +18,10 @@ body {
     border-bottom-right-radius: 40px;
     background-image: url("https://cdn.pixabay.com/photo/2017/03/27/14/31/stars-2179083_1280.jpg");
 
-    -webkit-mask-image: linear-gradient(180deg, #000, 90%, rgba(0, 0, 0, 0.707));
-    /* fading effect */
-    mask-image: linear-gradient(180deg, #000, 90%, rgba(0, 0, 0, 0.707));
-    /* fading effect */
+    // -webkit-mask-image: linear-gradient(180deg, #000, 90%, rgba(0, 0, 0, 0.707));
+    // /* fading effect */
+    // mask-image: linear-gradient(180deg, #000, 90%, rgba(0, 0, 0, 0.707));
+    // /* fading effect */
 
 
     // background-repeat: no-repeat;
@@ -142,52 +142,52 @@ body {
         }
     }
 
+    // .contact-orb {
+    //     position: fixed !important;
+    //     right: 4vw;
+    //     bottom: 10vh;
+    //     z-index: 999;
+    //     width: 50px;
+    //     height: 50px;
+    //     border-radius: 50%;
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-repeat: no-repeat;
+
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     cursor: pointer;
+    //     transition: .5s ease-in-out;
+
+    //     &:hover ul {
+    //         opacity: 1;
+    //     }
+
+
+    //     ul {
+    //         display: flex;
+    //         opacity: 0;
+    //         color: var(--text);
+    //         background: var(--second-color);
+    //         position: absolute;
+    //         transition: .5s ease-in-out;
+    //         position: relative;
+    //         top: 8%;
+    //         height: clamp(100px, 12vh, 200px);
+    //         width: clamp(100px, 12vw, 200px);
+    //         list-style: none;
+    //         flex-direction: column;
+    //         pointer-events: none;
+    //     }
+
+    // }
+
     .contact-orb {
-        position: fixed !important;
+        position: fixed;
         right: 4vw;
         bottom: 10vh;
-        z-index: 999;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        transition: .5s ease-in-out;
-
-        &:hover ul {
-            opacity: 1;
-        }
-
-
-        ul {
-            display: flex;
-            opacity: 0;
-            color: var(--text);
-            background: var(--second-color);
-            position: absolute;
-            transition: .5s ease-in-out;
-            position: relative;
-            top: 8%;
-            height: clamp(100px, 12vh, 200px);
-            width: clamp(100px, 12vw, 200px);
-            list-style: none;
-            flex-direction: column;
-            pointer-events: none;
-        }
-
-    }
-
-    .contact-orb {
-        position: absolute;
-        right: 4vw;
-        bottom: 10vh;
-        z-index: 999;
+        z-index: 999999;
 
         width: 62px;
         height: 62px;
@@ -275,11 +275,6 @@ body {
     }
 
 }
-
-
-
-
-
 
 @keyframes orbFloat {
     0% {
